unity/SyntactsDemo/Assets/Syntacts/Syntacts.cs


        /// <summary>Saves a Signal as a specified file format.<summary>
        public static bool ExportSignal(Signal signal, string filePath, FileFormat format = FileFormat.Auto, int sampleRate = 48000, double maxLength = 60) {
            return Dll.Library_exportSignal(signal.handle, filePath, (int)format, sampleRate, maxLength);
        }

        /// <summary>Imports a Signal of a specific file format.<summary>
        public static bool ImportSignal(out Signal signal, string filePath, FileFormat format = FileFormat.Auto, int sampleRate = 48000) {
            signal = new Signal(Dll.Library_importSignal(filePath, (int)format, sampleRate));
            if (signal.handle == Handle.Zero)
                return false;
            return true;
        }
    }

    ///////////////////////////////////////////////////////////////////////////
    // DLL IMPORTS (STAY OUT!)
    ///////////////////////////////////////////////////////////////////////////

    class Dll
    {
        [DllImport("syntacts_c")]
        public static extern int Syntacts_versionMajor();
        [DllImport("syntacts_c")]
        public static extern int Syntacts_versionMinor();
        [DllImport("syntacts_c")]
        public static extern int Syntacts_versionPatch();
        [DllImport("syntacts_c")]
        public static extern bool Syntacts_asioSupport();

        [DllImport("syntacts_c")]
        public static extern Handle Session_create();
        [DllImport("syntacts_c")]
        public static extern void Session_delete(Handle session);
        [DllImport("syntacts_c")]
        public static extern bool Session_valid(Handle session);
        [DllImport("syntacts_c")]
        public static extern int Session_open1(Handle session);
        [DllImport("syntacts_c")]
        public static extern int Session_open2(Handle session, int index);
        [DllImport("syntacts_c")]
        public static extern int Session_open3(Handle session, int index, int channelCount, double sampleRate);
        [DllImport("syntacts_c")]
        public static extern int Session_open4(Handle session, int api);
        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Session_open5(Handle session, string name, int api);
        [DllImport("syntacts_c")]
        public static extern int Session_close(Handle session);
        [DllImport("syntacts_c")]
        public static extern bool Session_isOpen(Handle session);
        [DllImport("syntacts_c")]
        public static extern int Session_play(Handle session, int channel, Handle signal);
        [DllImport("syntacts_c")]
        public static extern int Session_playAll(Handle session, Handle signal);
        [DllImport("syntacts_c")]
        public static extern int Session_stop(Handle session, int channel);
        [DllImport("syntacts_c")]
        public static extern int Session_stopAll(Handle session);
        [DllImport("syntacts_c")]
        public static extern int Session_pause(Handle session, int channel);
        [DllImport("syntacts_c")]
        public static extern int Session_pauseAll(Handle session);
        [DllImport("syntacts_c")]
        public static extern int Session_resume(Handle session, int channel);
        [DllImport("syntacts_c")]
        public static extern int Session_resumeAll(Handle session);
        [DllImport("syntacts_c")]
        public static extern bool Session_isPlaying(Handle session, int channel);
        [DllImport("syntacts_c")]
        public static extern bool Session_isPaused(Handle session, int channel);
        [DllImport("syntacts_c")]
        public static extern int Session_setVolume(Handle session, int channel, double volume);
        [DllImport("syntacts_c")]
        public static extern double Session_getVolume(Handle session, int channel);
        [DllImport("syntacts_c")]
        public static extern int Session_setPitch(Handle session, int channel, double pitch);
        [DllImport("syntacts_c")]
        public static extern double Session_getPitch(Handle session, int channel);
        [DllImport("syntacts_c")]
        public static extern double Session_getLevel(Handle session, int channel);
        [DllImport("syntacts_c")]
        public static extern int Session_getChannelCount(Handle session);
        [DllImport("syntacts_c")]
        public static extern double Session_getSampleRate(Handle session);
        [DllImport("syntacts_c")]
        public static extern double Session_getCpuLoad(Handle session);
        [DllImport("syntacts_c")]
        public static extern int Session_getCurrentDevice(Handle session);
        [DllImport("syntacts_c")]
        public static extern int Session_getDefaultDevice(Handle session);
        [DllImport("syntacts_c")]
        public static extern int Session_getAvailableDevicesCount(Handle session);
        [DllImport("syntacts_c")]
        public static extern void Session_getAvailableDevices(Handle session, int[] devices);
        [DllImport("syntacts_c")]
        public static extern int Session_count();

        [DllImport("syntacts_c")]
        public static extern int  Device_nameLength(Handle session, int d);
        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Device_name(Handle session, int d, StringBuilder buf);
        [DllImport("syntacts_c")]
        public static extern bool Device_isDefault(Handle session, int d);
        [DllImport("syntacts_c")]
        public static extern int  Device_api(Handle session, int d);
        [DllImport("syntacts_c")]
        public static extern int  Device_apiNameLength(Handle session, int d);
        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Device_apiName(Handle session, int d, StringBuilder buf);
        [DllImport("syntacts_c")]
        public static extern bool Device_isApiDefault(Handle session, int d);
        [DllImport("syntacts_c")]
        public static extern int  Device_maxChannels(Handle session, int d);
        [DllImport("syntacts_c")]
        public static extern int  Device_sampleRatesCount(Handle session, int d);
        [DllImport("syntacts_c")]
        public static extern void Device_sampleRates(Handle session, int d, int[] sampleRates);
        [DllImport("syntacts_c")]
        public static extern int  Device_defaultSampleRate(Handle session, int d);

        [DllImport("syntacts_c")]
        public static extern Handle Spatializer_create(Handle session);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_delete(Handle spat);
        [DllImport("syntacts_c")]
        public static extern bool Spatializer_valid(Handle spat);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_bind(Handle spat, Handle session);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_unbind(Handle spat);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_setPosition(Handle spat, int channel, double x, double y);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_getPosition(Handle spat, int channel, ref double x, ref double y);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_setTarget(Handle spat, double x, double y);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_getTarget(Handle spat, ref double x, ref double y);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_setRadius(Handle spat, double r);
        [DllImport("syntacts_c")]
        public static extern double Spatializer_getRadius(Handle spat);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_setRollOff(Handle spat, int type);
        [DllImport("syntacts_c")]
        public static extern int Spatializer_getRollOff(Handle spat);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_setWrap(Handle spat, double x, double y);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_getWrap(Handle spat, ref double x, ref double y);

        [DllImport("syntacts_c")]
        public static extern bool Spatializer_createGrid(Handle spat, int rows, int cols);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_clear(Handle spat);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_remove(Handle spat, int channel);
        [DllImport("syntacts_c")]
        public static extern int Spatializer_getChannelCount(Handle spat);
        [DllImport("syntacts_c")]
        public static extern bool Spatializer_hasChannel(Handle spat, int channel);

        [DllImport("syntacts_c")]
        public static extern void Spatializer_play(Handle spat, Handle signal);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_stop(Handle spat);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_setVolume(Handle spat, double volume);
        [DllImport("syntacts_c")]
        public static extern double Spatializer_getVolume(Handle spat);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_setPitch(Handle spat, double pitch);
        [DllImport("syntacts_c")]
        public static extern double Spatializer_getPitch(Handle spat);

        [DllImport("syntacts_c")]
        public static extern void Spatializer_autoUpdate(Handle spat, bool enable);
        [DllImport("syntacts_c")]
        public static extern void Spatializer_update(Handle spat);

        [DllImport("syntacts_c")]
        public static extern void Signal_delete(Handle signal);
        [DllImport("syntacts_c")]
        public static extern bool Signal_valid(Handle signal);
        [DllImport("syntacts_c")]
        public static extern double Signal_sample(Handle signal, double t);
        [DllImport("syntacts_c")]
        public static extern double Signal_length(Handle signal);
        [DllImport("syntacts_c")]
        public static extern void Signal_setGain(Handle signal, double gain);
        [DllImport("syntacts_c")]
        public static extern double Signal_getGain(Handle signal);
        [DllImport("syntacts_c")]
        public static extern void Signal_setBias(Handle signal, double bias);
        [DllImport("syntacts_c")]
        public static extern double Signal_getBias(Handle signal);
        [DllImport("syntacts_c")]
        public static extern int Signal_count();

        [DllImport("syntacts_c")]
        public static extern Handle Mul_SigFlt(Handle lhs, double rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Mul_FltSig(double lhs, Handle rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Add_SigFlt(Handle lhs, double rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Add_FltSig(double lhs, Handle rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Sub_SigFlt(Handle lhs, double rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Sub_FltSig(double lhs, Handle rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Neg_Sig(Handle signal);
